<resources>
    <string name="app_name">Amusing Sticker Box</string>
    <string name="authorization_succeeded">Authorization succeeded!</string>
    <string name="checkPermission_Authorization_succeeded">checkPermission: Authorization succeeded!</string>
    <string name="please_open_the_relevant_permissions_otherwise_the_application_cannot_be_used_normally">Please open the relevant permissions, otherwise the application cannot be used normally!</string>
    <string name="create_sticker">Create Sticker</string>
    <string name="all_photos">All Photos</string>
    <string name="text">Text</string>
    <string name="cropping">Cropping</string>
    <string name="manual_crop">Manual Crop</string>
    <string name="square_crop">Square Crop</string>
    <string name="circle_crop">Circle Crop</string>
    <string name="edit">Edit</string>
    <string name="emoji">Emoji</string>
    <string name="are_you_sure_want_to_exit">Are you sure, want to Exit?</string>
    <string name="exit">Exit</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="sticker_pack_name">Sticker Pack Name</string>
    <string name="pack_icon">Pack Icon</string>
    <string name="enter_your_pack_name">Enter your pack name</string>
    <string name="enter_owner_name">Enter owner name</string>
    <string name="create_now">Create Now</string>
    <string name="add_sticker">Add Sticker</string>
    <string name="my_work">My work</string>
    <string name="my_own_sticker">My Own Sticker</string>
    <string name="font_change">Font change</string>
</resources>