<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Had_save_view">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"
        android:id="@+id/up"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.49"
        android:id="@+id/bottom"/>

    <ImageView
        android:id="@+id/com_img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/saved_border"
        app:layout_constraintTop_toBottomOf="@+id/up"
        app:layout_constraintBottom_toBottomOf="@id/bottom"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/had_save_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"

            android:text="Create" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/com_img"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/pack_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bottom"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/sticker_pack_name" />

        <EditText
            android:id="@+id/had_save_pack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:background="@drawable/had_save_frame"
            android:padding="20dp"
            android:elevation="5dp"
            android:textColor="#FF676D77"
            android:textColorHint="#FF676D77"
            android:hint="@string/enter_your_pack_name"
            />

        <EditText
            android:id="@+id/had_save_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@drawable/had_save_frame"
            android:elevation="5dp"
            android:padding="20dp"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:textColorHint="#FF676D77"
            android:textColor="#FFB9BDC7"
            android:hint="@string/enter_owner_name"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/create_now"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/edit_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:padding="20dp"
        android:textSize="22sp"
        android:text="@string/create_now" />

</androidx.constraintlayout.widget.ConstraintLayout>