<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Crop_Photo_Activity">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.1"
        android:orientation="horizontal"
        android:id="@+id/up"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"
        android:id="@+id/bottom"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:id="@+id/crop_tab"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/crop_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/cropping" />

        <ImageView
            android:id="@+id/crop_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/done" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/photo_crop_layout"
        app:layout_constraintTop_toTopOf="@id/up"
        android:background="@drawable/bg_edit"
        app:layout_constraintBottom_toBottomOf="@id/bottom">

        <ImageView
            android:id="@+id/chosed_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            tools:srcCompat="@tools:sample/avatars" />

        <com.example.amusingstickerbox.self_made.CropPhotoView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/square_crop"
            android:visibility="gone"
            />
        <com.example.amusingstickerbox.self_made.CustomView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:id="@+id/manual_view"
            android:visibility="gone"/>
        <com.example.amusingstickerbox.self_made.CircleCropView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:id="@+id/oval_crop"
            android:visibility="gone"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/wake_finger_cut"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/manual" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:padding="5dp"
                android:text="@string/manual_crop" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/wake_square_cut"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/square" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:padding="5dp"
                android:text="@string/square_crop" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/wake_circle_cut"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/circle" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:padding="5dp"
                android:text="@string/circle_crop" />
        </LinearLayout>
    </LinearLayout>
    <include
        android:id="@+id/square_cut_view"
        layout="@layout/square_cut_view"
        android:visibility="gone"/>
    <include
        android:id="@+id/finger_cut_view"
        layout="@layout/finger_cut_view"
        android:visibility="gone"/>
    <include
        android:id="@+id/oval_cut_view"
        layout="@layout/oval_crop_view"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>