<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Edit_sticker">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.2"
        android:orientation="horizontal"
        android:id="@+id/up"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"
        android:id="@+id/down"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/edit_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/edit" />

        <ImageView
            android:id="@+id/had_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/done" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/down"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:background="@drawable/edit_text"
            android:padding="15dp"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/text" />

        <TextView
            android:id="@+id/txt_emoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/edit_emoji"
            android:padding="15dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/emoji" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/up"
        android:id="@+id/final_save"
        android:background="@drawable/bg_edit"
        app:layout_constraintBottom_toBottomOf="@id/down">

        <ImageView
            android:id="@+id/emoji_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:longClickable="true"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/picture_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:longClickable="true"
            tools:srcCompat="@tools:sample/avatars"
            />

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_gravity="bottom|center"
            android:inputType="text"
            android:enabled="true"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:maxLines="1"
            android:padding="10dp"
            android:background="@drawable/emoji_border"
            />

    </FrameLayout>

    <include
        android:id="@+id/emoji_show"
        layout="@layout/emoji_view"
        android:visibility="gone"/>
    <include
        android:id="@+id/text_chang_show"
        layout="@layout/text_show_view"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>